--- a/LePay/res/values-zh-rCN/strings.xml
+++ b/LePay/res/values-zh-rCN/strings.xml
@@ -5,4 +5,13 @@
     <string name="pay_network_error_sure">确定</string>
     <string name="pay_no_network">无网络，请连接后重试</string>
 
+    <string name="setting_label">设置</string>
+    <string name="setting_account_verify_label">实名认证</string>
+    <string name="prompt_str_account_verified">已完成实名认证</string>
+    <string name="setting_account_verified">已认证</string>
+    <string name="setting_account_not_verify">未认证</string>
+    <string name="setting_pay_pwd_label">支付密码</string>
+    <string name="pay_pwd_mod_title">修改密码</string>
+    <string name="pay_pwd_set_title">设置密码</string>
+
 </resources>
