--- a/LePay/res/values/strings.xml
+++ b/LePay/res/values/strings.xml
@@ -5,4 +5,13 @@
     <string name="pay_network_error_sure">OK</string>
     <string name="pay_no_network">Disconnected. Please connect to a network.</string>
 
+    <string name="setting_label">Settings</string>
+    <string name="setting_account_verify_label">Real name verification</string>
+    <string name="prompt_str_account_verified">verification complete</string>
+    <string name="setting_account_verified">name verified</string>
+    <string name="setting_account_not_verify">name not verified</string>
+    <string name="setting_pay_pwd_label">Payment password</string>
+    <string name="pay_pwd_mod_title">Modify password</string>
+    <string name="pay_pwd_set_title">Set password</string>
+
 </resources>
