--- a/LePay/res/values-zh-rCN/strings.xml
+++ b/LePay/res/values-zh-rCN/strings.xml
@@ -4,6 +4,21 @@
     <string name="pay_network_error">钱包应用无法连接网络</string>
     <string name="pay_network_error_sure">确定</string>
     <string name="pay_no_network">无网络，请连接后重试</string>
+    <string name="pay_no_network_str">网络连接失败</string>
+
+    <string name="lepay_channel_cancel">取消</string>
+    <string name="lepay_payment_center">支付中心</string>
+    <string name="lepay_payment_price_str">支付金额：￥%s</string>
+    <string name="lepay_payment_available_limit_str">可用额度￥%s</string>
+    <string name="lepay_data_error">加载失败，请重试</string>
+    <string name="lepay_payment_money_insufficient">可用额度不足</string>
+    <string name="lepay_payment_unavailable">不可用</string>
+    <string name="lepay_repayment">重新支付</string>
+    <string name="lepay_fail">支付失败</string>
+    <string name="lepay_ypa_notactivation">未激活</string>
+    <string name="lepay_user_select_pay_result_title">是否已支付订单?</string>
+    <string name="lepay_user_select_pay_result_success">已支付</string>
+    <string name="lepay_user_select_pay_result_failed">未支付</string>
 
     <string name="setting_label">设置</string>
     <string name="setting_account_verify_label">实名认证</string>
