143-wallet: add catch exception for killing wallet(lepay) process
Ticket: LEUIAPP-1334
Solution:
在kill钱包(LePay)进程时添加try catch,如果kill失败，提醒用户手动kill

Change-Id: I73c089e733262921b07fd70b28b5081207227e57
Signed-off-by: huhongbin <huhongbin@le.com>

--- a/tools/EnvSetting/res/values/strings.xml
+++ b/tools/EnvSetting/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">EvmSettingApp</string>
+    <string name="kill_error_msg">请手动KILL钱包(LePay)进程\n</string>
 </resources>
