131-wallet: LePay 解决支付控件偶尔崩溃问题
Ticket: LEUIAPP-1649

Root cause:
	1.切换字体或语言时LeBottomSheet重复调用setStyle()会出现异常
	2.“加载失败，请重试”的英文文案string name和中文不一致，导致找不到资源ID

Solution:
	1.切换字体或语言更新UI时不调用setStyle()函数，重新加载一遍资源可实现切换
	2.更改英文文案“加载失败，请重试”name和中文name一致

Change-Id: I1313f2a2aa4179631eb2a235fa8f273f30f6a490
Signed-off-by: changjiajie <changjiajie@le.com>

--- a/LePay/res/values/strings.xml
+++ b/LePay/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="lepay_payment_center">Payment center</string>
     <string name="lepay_payment_price_str">Payment amount：￥%s</string>
     <string name="lepay_payment_available_limit_str">Available amount￥%s</string>
-    <string name="lepay_channel_list_data_error">Loading failed, please try again</string>
+    <string name="lepay_data_error">Loading failed, please try again</string>
     <string name="lepay_payment_money_insufficient">Insufficient amount available</string>
     <string name="lepay_payment_unavailable">Unavailable, please contact customer service.</string>
     <string name="lepay_repayment">Pay again</string>
