143-wallet: Adjust UI
Ticket: LEUIAPP-1580

Root cause: 调整UI设计

Solution:
	修改”支付金额“为“应付金额”，调整金额位置的布局
	调整字体大小及默认图标大小

Change-Id: I874d56af1240be1167497dacdc863c59e21b56b9
Signed-off-by: changjiajie <changjiajie@le.com>

--- a/LePay/res/values-zh-rCN/strings.xml
+++ b/LePay/res/values-zh-rCN/strings.xml
@@ -8,7 +8,7 @@
 
     <string name="lepay_channel_cancel">取消</string>
     <string name="lepay_payment_center">支付中心</string>
-    <string name="lepay_payment_price_str">支付金额：￥%s</string>
+    <string name="lepay_payment_price_label">应付金额</string>
     <string name="lepay_payment_available_limit_str">可用额度￥%s</string>
     <string name="lepay_data_error">加载失败，请重试</string>
     <string name="lepay_payment_money_insufficient">可用额度不足</string>
