143-wallet: String:  en-US需要改的字串
Ticket: LEUIAPP-2404

Root cause : no

Solution: update string;

Change-Id: I38b170a0e6f960f941d33bf76f079566fde49efa
Signed-off-by: Li Junying <lijunying@le.com>

--- a/LetvWallet/res/values/strings.xml
+++ b/LetvWallet/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="app_name">Wallet</string>
     <string name="menu_bills">Order history</string>
     <string name="label_more">More</string>
-    <string name="label_entity_flow">Data plan top-up</string>
+    <string name="label_entity_flow">Data top-up</string>
     <string name="label_entity_mobile">Mobile top-up</string>
     <string name="label_entity_movie">Movie ticket</string>
     <string name="label_entity_show">Performance ticket</string>
