--- a/LePay/res/values-zh-rCN/strings.xml
+++ b/LePay/res/values-zh-rCN/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string name="app_name">乐视支付</string>
     <string name="pay_network_error">钱包应用无法连接网络</string>
     <string name="pay_network_error_sure">确定</string>
     <string name="pay_no_network">无网络，请连接后重试</string>
